embed iframes, click to load

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:               Martin
 tagline:             ''
 description:         ''
-url:                 https://martinmullins.github.io/blog
+url:                 https://martinmullins.github.io
 baseurl:             '/blog'
 paginate:            5
 permalink:           pretty
